// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"if (false) {
  // @ts-ignore: Unreachable code error
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Use "@ts-expect-error" instead of "@ts-ignore", as "@ts-ignore" will do nothing if the following line is error-free.
  console.log('hello');
}
if (false) {
  /*
  ~~ Use "@ts-expect-error" instead of "@ts-ignore", as "@ts-ignore" will do nothing if the following line is error-free.
  @ts-ignore: Unreachable code error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  */
~~
  console.log('hello');
}
"
`;

exports[` 2`] = `
"if (false) {
  // Compiler warns about unreachable code error
  console.log('hello');
}
"
`;

exports[` 3`] = `
"if (false) {
  // @ts-expect-error
  ~~~~~~~~~~~~~~~~~~~ Include a description after the "@ts-expect-error" directive to explain why the @ts-expect-error is necessary. The description must be 3 characters or longer.
  console.log('hello');
}
if (false) {
  /* @ts-expect-error */
  ~~~~~~~~~~~~~~~~~~~~~~ Include a description after the "@ts-expect-error" directive to explain why the @ts-expect-error is necessary. The description must be 3 characters or longer.
  console.log('hello');
}
"
`;

exports[` 4`] = `
"if (false) {
  // @ts-expect-error: Unreachable code error
  console.log('hello');
}
if (false) {
  /*
  @ts-expect-error: Unreachable code error
  */
  console.log('hello');
}
"
`;

exports[` 5`] = `
"// @ts-expect-error: the library definition is wrong
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ The description for the "@ts-expect-error" directive must match the ^: TS\\d+ because .+$ format.
const a = doSomething('hello');
"
`;

exports[` 6`] = `
"// @ts-expect-error: TS1234 because the library definition is wrong
const a = doSomething('hello');
"
`;

exports[` 7`] = `
"if (false) {
  // @ts-expect-error: TODO
  ~~~~~~~~~~~~~~~~~~~~~~~~~ Include a description after the "@ts-expect-error" directive to explain why the @ts-expect-error is necessary. The description must be 10 characters or longer.
  console.log('hello');
}
"
`;

exports[` 8`] = `
"if (false) {
  // @ts-expect-error The rationale for this override is described in issue #1337 on GitLab
  console.log('hello');
}
"
`;
